fix tags not wrapping on blog item

--- a/src/app/blog/page.module.scss
+++ b/src/app/blog/page.module.scss
@@ -242,6 +242,7 @@ a.postLink {
         gap:0.2rem;
         margin-top:1rem;
         margin-bottom:0.5rem;
+        flex-wrap:wrap;
         .postTag {
             border-radius:5px;
             border:1px solid #ff9999;
